# vulkan-guide

./: .gitignore  CMakeLists.txt  README.md
asset-baker/: CMakeLists.txt  asset_main.cpp
assetlib/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  prefab_asset.cpp  prefab_asset.h  texture_asset.cpp  texture_asset.h
shaders/: colored_triangle.frag  colored_triangle.vert  default_lit.frag  mesh.vert  textured_lit.frag  tri_mesh.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
